-
Bug
-
Resolution: Done
-
Not Evaluated
-
5.0.0
-
None
-
Platform: Mac OSX 10.6 Snow Leopard (Lion seems to be immune)
-
-
cecec2e2ce335a62e1fa3eb80a9b45c2d2e6c822
$QTDIR/bin/qmlscene segfaults - see stack trace attached.
To reproduce simply run it from the command line with no arguments - it segfaults before displaying the "Open File" dialog. Only does this on 10.6 Snow Leopard; 10.7 Lion seems OK.
Reverting change 1b51079 in qt/qtbase alleviates the problem - see diff of change attached.
# "fix" the problem patch -p1 -R < break.patch
Qt Version: using latest builds of Qt5 from code review.qt-project.org (as at 30 Jan 2012)
part of the trace:
21: Thread 0 Crashed: Dispatch queue: com.apple.main-thread 22: 0 dyld 0x00007fff5fc0be85 ImageLoader::weakBind(ImageLoader::LinkContext const&) + 153 23: 1 dyld 0x00007fff5fc0c82f ImageLoader::link(ImageLoader::LinkContext const&, bool, bool, ImageLoader::RPathChain const&) + 191 24: 2 dyld 0x00007fff5fc04d48 dyld::link(ImageLoader*, bool, ImageLoader::RPathChain const&) + 118 25: 3 dyld 0x00007fff5fc08f68 dlopen + 490 26: 4 libSystem.B.dylib 0x00007fff8a367e40 dlopen + 61 27: 5 QtCore 0x0000000100995759 QLibraryPrivate::load_sys() + 1321 28: 6 QtCore 0x0000000100993783 QLibraryPrivate::isPlugin() + 1203 29: 7 QtCore 0x000000010098d4c1 QFactoryLoader::update() + 1585 30: 8 QtCore 0x000000010098e3eb QFactoryLoader::QFactoryLoader(char const*, QString const&, Qt::CaseSensitivity) + 299 31: 9 QtGui 0x0000000100e49383 loader() + 115 32: 10 QtGui 0x0000000100e498a5 QPlatformIntegrationFactory::create(QString const&, QString const&) + 293 33: 11 QtGui 0x0000000100e53c1a init_platform(QString const&, QString const&) + 602 34: 12 QtGui 0x0000000100e5497c QGuiApplicationPrivate::createPlatformIntegration() + 1020